# ping

./: .gitignore  .gitmodules  AGENT_ENTRYPOINT.md  AgentDrivenProjectPlan.md  AgentTodo.md  AgentTodo_HistNoLinearOption1.md  CMakeLists.txt  Doxyfile.in  Project_Description.md  README.md  build.ps1  runtime_windows.csv  test.ps1  test.py  test.sh
docs/: AGENTEN_RULES.md  agent_checklist.md  agent_rules.md  architecture.md  report.md  wiki_submodule_guide.md
docs/Reports/: Report_2026-01-30_17-42_non_linear_histogram.md  Report_20260131_150410_translations.md  Report_20260131_164147_ScriptComments.md  Report_20260131_164737_BuildTestDocsScripts.md  Report_20260131_165255_UpdateDocs.md  Report_20260131_170100_ReadmeRestore.md
docs/documentation/: mainpage.md  src_overview.md
docs/prompt_reports/: 0001-2026-01-30-15-39-windows-null-backend.md
docs/prompts/: 0001-2026-01-30-15-39-windows-null-backend.md  PROMPT_to_generate_the_wiki.md  Prompt_20260131_163354_ReadAgentEntrypoint.md  Prompt_20260131_163940_ScriptComments.md  Prompt_20260131_164607_BuildTestDocsScripts.md  Prompt_20260131_165204_UpdateDocs.md
docs/todo/: AgentTodo.md  AgentTodo_HistNoLinearOption1.md
include/: config.hpp  console_view.hpp  console_view_impl.hpp  csv_exporter.hpp  json_exporter.hpp  ping_session.hpp  platform_ping_backend.hpp  platform_ping_backend_factory.hpp  platform_ping_backend_linux.hpp  platform_ping_backend_macos.hpp  platform_ping_backend_windows.hpp  statistics_aggregator.hpp  statistics_aggregator_impl.hpp
plans/: histogram_buckets_konzept.md  histogram_buckets_todo.md
scripts/: build_matrix.md  read_rules.ps1  runtime_tests.md  test_hil.bat  test_matrix.md
scripts/user/: build_all_cygwin_mingw.sh  build_all_msvc.bat  build_all_unix.sh  build_all_windows.ps1
src/: CMakeLists.txt  console_view_impl.cpp  csv_exporter.cpp  json_exporter.cpp  main.cpp  ping_session.cpp  platform_ping_backend_factory.cpp  platform_ping_backend_linux.cpp  platform_ping_backend_macos.cpp  platform_ping_backend_windows.cpp  statistics_aggregator.cpp
tests/: CMakeLists.txt  integration_ping_tests.cpp  ping_workflow_tests.cpp  statistics_aggregator_tests.cpp
wiki/: Home.md
